--- a/MakersFinders_Master/Base.lproj/Main.storyboard
+++ b/MakersFinders_Master/Base.lproj/Main.storyboard
@@ -79,42 +79,34 @@
                                         <rect key="frame" x="7" y="6" width="159" height="71"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZRf-uS-kJM">
-                                                <rect key="frame" x="6" y="14" width="55" height="37"/>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="r46-Az-Rw6">
+                                                <rect key="frame" x="14" y="7" width="131" height="57"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             </imageView>
-                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8XA-R9-Pkk">
-                                                <rect key="frame" x="85" y="22" width="42" height="21"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
                                         </subviews>
                                         <color key="backgroundColor" red="1" green="0.3507637757" blue="0.32266335260000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="44" id="T4j-9s-BNf"/>
+                                            <constraint firstItem="r46-Az-Rw6" firstAttribute="top" secondItem="eXa-Lr-4Lp" secondAttribute="top" constant="7" id="Kph-nf-QWI"/>
+                                            <constraint firstAttribute="trailing" secondItem="r46-Az-Rw6" secondAttribute="trailing" constant="15" id="KwY-jm-hhx"/>
+                                            <constraint firstItem="r46-Az-Rw6" firstAttribute="leading" secondItem="eXa-Lr-4Lp" secondAttribute="leading" constant="15" id="WmK-xI-O5q"/>
+                                            <constraint firstAttribute="bottom" secondItem="r46-Az-Rw6" secondAttribute="bottom" constant="7" id="dDU-is-eFc"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FXy-tF-VTb">
                                         <rect key="frame" x="174" y="6" width="123" height="71"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eXv-kN-5V7">
-                                                <rect key="frame" x="8" y="14" width="55" height="37"/>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0Ca-FG-ZlI">
+                                                <rect key="frame" x="9" y="8" width="104" height="55"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             </imageView>
-                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DXz-Fb-Yx0">
-                                                <rect key="frame" x="71" y="22" width="42" height="21"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
                                         </subviews>
                                         <color key="backgroundColor" red="0.2053430772" green="0.40805451770000001" blue="0.35165551909999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="44" id="HJB-nU-lYU"/>
+                                            <constraint firstAttribute="trailing" secondItem="0Ca-FG-ZlI" secondAttribute="trailing" constant="20" id="6ZW-3g-CDZ"/>
+                                            <constraint firstItem="0Ca-FG-ZlI" firstAttribute="leading" secondItem="FXy-tF-VTb" secondAttribute="leading" constant="22" id="8tx-xQ-zre"/>
+                                            <constraint firstAttribute="bottom" secondItem="0Ca-FG-ZlI" secondAttribute="bottom" constant="7" id="Snd-nB-hd4"/>
+                                            <constraint firstItem="0Ca-FG-ZlI" firstAttribute="top" secondItem="FXy-tF-VTb" secondAttribute="top" constant="7" id="yPQ-oB-QZ3"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YUc-qr-a4R">
@@ -143,10 +135,20 @@
                                     <constraint firstItem="FXy-tF-VTb" firstAttribute="leading" secondItem="eXa-Lr-4Lp" secondAttribute="trailing" id="v7z-hu-irV"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="j5l-Xj-7YC">
-                                <rect key="frame" x="0.0" y="152" width="320" height="416"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="59" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="j5l-Xj-7YC">
+                                <rect key="frame" x="0.0" y="285" width="320" height="283"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="59" id="tfX-yX-Cbf" customClass="MFExploreCustomTableViewCell">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="59"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tfX-yX-Cbf" id="R26-nN-6Ix">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="58"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -166,11 +168,10 @@
                     <navigationItem key="navigationItem" id="5Cg-7Q-Y5c"/>
                     <connections>
                         <outlet property="collectivesButton" destination="FXy-tF-VTb" id="TIt-IB-LfJ"/>
-                        <outlet property="collectivesImage" destination="eXv-kN-5V7" id="tIc-vy-ul7"/>
-                        <outlet property="collectivesLabel" destination="DXz-Fb-Yx0" id="G6H-MM-rLG"/>
+                        <outlet property="collectivesImage" destination="0Ca-FG-ZlI" id="y3c-hS-rhk"/>
                         <outlet property="makersFindersButton" destination="eXa-Lr-4Lp" id="ZqE-Nh-I8k"/>
-                        <outlet property="makersFindersImage" destination="ZRf-uS-kJM" id="PrH-ye-j87"/>
-                        <outlet property="makersFindersLabel" destination="8XA-R9-Pkk" id="DGh-zG-mAM"/>
+                        <outlet property="makersFindersImage" destination="r46-Az-Rw6" id="3KD-gf-MXd"/>
+                        <outlet property="tableView" destination="j5l-Xj-7YC" id="ivo-wA-ERa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p5q-Ei-Too" userLabel="First Responder" sceneMemberID="firstResponder"/>
