--- a/MakersFinders_Master/Base.lproj/Main.storyboard
+++ b/MakersFinders_Master/Base.lproj/Main.storyboard
@@ -112,9 +112,19 @@
                                     <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YUc-qr-a4R">
                                         <rect key="frame" x="20" y="91" width="267" height="97"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <subviews>
+                                            <searchBar contentMode="redraw" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pqn-M1-pZv">
+                                                <rect key="frame" x="0.0" y="27" width="267" height="44"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </searchBar>
+                                        </subviews>
                                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
+                                            <constraint firstItem="Pqn-M1-pZv" firstAttribute="top" secondItem="YUc-qr-a4R" secondAttribute="top" id="2kM-rU-DSh"/>
                                             <constraint firstAttribute="height" constant="44" id="DQr-Or-AXb"/>
+                                            <constraint firstItem="Pqn-M1-pZv" firstAttribute="leading" secondItem="YUc-qr-a4R" secondAttribute="leading" id="gbt-ga-gD5"/>
+                                            <constraint firstAttribute="trailing" secondItem="Pqn-M1-pZv" secondAttribute="trailing" id="oei-Ym-3la"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -148,7 +158,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uEI-qx-cS1">
-                                                    <rect key="frame" x="0.0" y="0.0" width="79" height="79"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RBA-Ok-TRe">
