--- a/MakersFinders_Master/Base.lproj/Main.storyboard
+++ b/MakersFinders_Master/Base.lproj/Main.storyboard
@@ -174,7 +174,7 @@
                                         <rect key="frame" x="20" y="91" width="267" height="97"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <subviews>
-                                            <searchBar contentMode="redraw" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pqn-M1-pZv">
+                                            <searchBar contentMode="redraw" misplaced="YES" placeholder="Search Makers, Finders, and Hashtags" translatesAutoresizingMaskIntoConstraints="NO" id="Pqn-M1-pZv">
                                                 <rect key="frame" x="0.0" y="27" width="267" height="44"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -266,6 +266,7 @@
                         <outlet property="collectivesImage" destination="0Ca-FG-ZlI" id="y3c-hS-rhk"/>
                         <outlet property="makersFindersButton" destination="eXa-Lr-4Lp" id="ZqE-Nh-I8k"/>
                         <outlet property="makersFindersImage" destination="r46-Az-Rw6" id="3KD-gf-MXd"/>
+                        <outlet property="searchField" destination="Pqn-M1-pZv" id="TZz-mi-prP"/>
                         <outlet property="tableView" destination="j5l-Xj-7YC" id="ivo-wA-ERa"/>
                     </connections>
                 </viewController>
