--- a/Main_Matt.storyboard
+++ b/Main_Matt.storyboard
@@ -169,6 +169,18 @@
                                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qdZ-TA-6mQ">
                                                 <rect key="frame" x="161" y="245" width="155" height="210"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mJ2-BU-xoN">
+                                                        <rect key="frame" x="8" y="-5" width="135" height="222"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <state key="normal">
+                                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                        </state>
+                                                        <connections>
+                                                            <action selector="finderIsTapped:" destination="gaE-Ut-zpF" eventType="touchUpInside" id="iwV-Pf-1Hm"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
                                             </view>
                                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mot-Zn-UMv">
                                                 <rect key="frame" x="160" y="212" width="1" height="190"/>
